fixed text wrap issue, counter color text issue, reset of character count issues, error handling issue. Also implemented static text entry box to be more inline with industry convention (use cannot expand text area w mouse).

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -70,6 +70,24 @@ body {
 	border-bottom: 5px solid #c77282;
 }
 
+.error-message {
+	display: none;
+	background-color: #fce4e4;
+	border: 1px solid #fcc2c3;
+	float: left;
+	padding: 20px 30px;
+}
+
+.error-blank,
+.error-length {
+	color: #cc0033;
+	font-family: Helvetica, Arial, sans-serif;
+	font-size: 13px;
+	font-weight: bold;
+	line-height: 20px;
+	text-shadow: 1px 1px rgba(250, 250, 250, 0.3);
+}
+
 .below-tweet {
 	display: flex;
 	justify-content: space-between;
